--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,1 +1,5 @@
-<h1>Head Hunter App :)</h1>
+<div id="landing">
+    <h1>Head Hunter App :)</h1>
+    <button class="btn btn-primary bts" (click)="go('date')"> Crear una Cita</button>
+    <button class="btn btn-success bts" (click)="go('survey')"> Evaluar Experiencia</button>
+</div>
