--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -2,4 +2,5 @@
     <h1>Head Hunter App :)</h1>
     <button class="btn btn-primary bts" (click)="go('date')"> Crear una Cita</button>
     <button class="btn btn-success bts" (click)="go('survey')"> Evaluar Experiencia</button>
+    <button class="btn btn-info bts" (click)="go('lookup')"> Buscar Proyectos</button>
 </div>
