--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -3,4 +3,5 @@
     <button class="btn btn-primary bts" (click)="go('date')"> Crear una Cita</button>
     <button class="btn btn-success bts" (click)="go('survey')"> Evaluar Experiencia</button>
     <button class="btn btn-info bts" (click)="go('lookup')"> Buscar Proyectos</button>
+    <button class="btn btn-warning bts" (click)="go('date/signup')"> Inscribirse a Speed Date </button>
 </div>
