--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -2,6 +2,13 @@
     <h1>Head Hunter App :)</h1>
     <button class="btn btn-primary bts" (click)="go('date')"> Crear una Cita</button>
     <button class="btn btn-success bts" (click)="go('survey')"> Evaluar Experiencia</button>
-    <button class="btn btn-info bts" (click)="go('lookup')"> Buscar Proyectos</button>
-    <button class="btn btn-warning bts" (click)="go('date/signup')"> Inscribirse a Speed Date </button>
+    <button class="btn btn-info bts" style="color: white;" (click)="go('lookup')"> Buscar Proyectos</button>
+    <button class="btn btn-danger bts" (click)="go('date/signup')"> Inscribirse a Speed Date </button>
+    <button class="btn btn-secondary bts" (click)="go('historic')"> Generar Histórico </button>
+    <button class="btn btn-primary bts" (click)="go('talent/add')"> Crear Talento </button>
+    <button class="btn btn-success bts" (click)="go('talent/view/1')"> Ver Talento</button>
+    <button class="btn btn-info bts" style="color: white;" (click)="go('hunter/add')"> Crear Cazador</button>
+    <button class="btn btn-danger bts" (click)="go('hunter/view/1')"> Ver Cazador </button>
+    <button class="btn btn-secondary bts" (click)="go('announce/add')"> Anunciar Proyecto </button>
+    <button class="btn btn-primary bts" (click)="go('date/add')"> Crear Speed-Date </button>
 </div>
