added: navbar n homepg

--- a/src/app/pages/date-signup/date-signup.component.html
+++ b/src/app/pages/date-signup/date-signup.component.html
@@ -1,5 +1,5 @@
 <div id="date-signup">
-    <h1 id="title"> Inscribirse a Speed Date</h1>
+    <!-- <h1 id="title"> Inscribirse a Speed Date</h1> -->
     <div id="mainContainer">
         <div id="formz">
             <div class="group">
