--- a/src/app/pages/date/date.component.html
+++ b/src/app/pages/date/date.component.html
@@ -1,5 +1,5 @@
 <div id="makeDate">
-    <h1 id="title">Establecer Cita</h1>
+    <!-- <h1 id="title">Establecer Cita</h1> -->
     <div id="mainContainer">
         <div id="formz">
             <div class="group">
