--- a/src/app/pages/historic/historic.component.html
+++ b/src/app/pages/historic/historic.component.html
@@ -1,5 +1,5 @@
 <div id="historic">
-    <h1 id="title"> Generar Histórico</h1>
+    <!-- <h1 id="title"> Generar Histórico</h1> -->
     <div id="mainContainer">
         <div id="formz">
             <div class="group">
