--- a/src/app/pages/survey/survey.component.html
+++ b/src/app/pages/survey/survey.component.html
@@ -1,5 +1,5 @@
 <div id="survey">
-    <h1 id="title">Evaluar Experiencia</h1>
+    <!-- <h1 id="title">Evaluar Experiencia</h1> -->
     <div id="mainContainer">
         <div id="formz">
             <div class="group">
@@ -59,7 +59,7 @@
     </div>
     <div id="ftr">
         <button class="btn btn-success">
-            Crear Cita
+            Enviar
         </button>
     </div>
     <app-back-btn></app-back-btn>
