--- a/src/app/pages/talent/add/add.component.html
+++ b/src/app/pages/talent/add/add.component.html
@@ -1,5 +1,5 @@
 <div id="signup">
-    <h1 id="title">Proveedor de Talento</h1>
+    <!-- <h1 id="title">Proveedor de Talento</h1> -->
     <div id="mainContainer">
         <div id="formz">
             <form class="row g-3">
