--- a/src/app/pages/talent/view/view.component.html
+++ b/src/app/pages/talent/view/view.component.html
@@ -1,4 +1,5 @@
 <div id="signup">
+    <h1>{{list.length}}</h1>
     <div id="mainContainer">
         <div id="formz">
             <section style="background-color: #eee;">
