--- a/src/app/pages/talent/add/add.component.html
+++ b/src/app/pages/talent/add/add.component.html
@@ -112,7 +112,7 @@
         </div>
         <div class="mb-3">
           <label for="capabilitiesDescription" class="form-label lbl"
-            >Descripción de Capacidades</label
+            >Descripción de Habilidades</label
           >
           <textarea
             class="form-control"
