Add corrections to some pages

--- a/src/app/pages/talent/add/add.component.html
+++ b/src/app/pages/talent/add/add.component.html
@@ -9,7 +9,7 @@
             type="text"
             class="form-control"
             name="specificSizeInputName"
-            placeholder="Nombre"
+            placeholder="John Doe"
             [(ngModel)]="form.name"
           />
         </div>
